<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/itemOur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_weight="1"
        android:fontFamily="@font/inter"
        android:textColor="@color/todaytext1"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/today_item_ora" />

    <ImageView
        android:id="@+id/itemimg"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/margin_smaller"
        app:layout_constraintEnd_toStartOf="@id/tomorrow_temp"
        app:layout_constraintStart_toEndOf="@id/itemOur"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sun" />

    <TextView
        android:id="@+id/tomorrow_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_smaller"
        android:layout_weight="1"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/today_item_gradi" />

    <ImageView
        android:id="@+id/tomorrow_freccia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:rotation="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/tomorrow_precipitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_smaller"
        android:layout_marginEnd="@dimen/margin_bigger"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toStartOf="@id/tomorrow_freccia"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/today_item_precipitazioni" />

    <ImageView
        android:id="@+id/tomorrow_precipitationimg"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_smaller"
        app:layout_constraintEnd_toStartOf="@id/tomorrow_precipitation"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/raindrop" />



    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:elevation="16dp"
        android:visibility="gone"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemimg"
        tools:visibility="visible">
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/percipita"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/percived" />

            <TextView
                android:id="@+id/Indiceuv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UV_index"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.70"
                app:layout_constraintStart_toEndOf="@id/percipita"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/percepitaNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/percipita"
                tools:text="@string/temperature" />

            <TextView
                android:id="@+id/Uvindex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/UV"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/Indiceuv"
                app:layout_constraintTop_toBottomOf="@id/Indiceuv"
                tools:text="@string/UV" />

            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_tiny"
                android:layout_marginHorizontal="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/percepitaNum" />

            <TextView
                android:id="@+id/umidita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/Umidity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator2" />

            <TextView
                android:id="@+id/vento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/wind"
                app:layout_constraintStart_toStartOf="@id/Indiceuv"
                app:layout_constraintTop_toBottomOf="@id/separator2" />

            <TextView
                android:id="@+id/ventoNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/windpower"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/Indiceuv"
                app:layout_constraintTop_toBottomOf="@id/vento"
                tools:text="@string/windpower" />

            <TextView
                android:id="@+id/umiditaNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Umiditynum"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/umidita"
                tools:text="@string/Umiditynum" />

            <View
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_tiny"
                android:layout_marginHorizontal="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ventoNum" />

            <TextView
                android:id="@+id/copertura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/copertura"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator3" />

            <TextView
                android:id="@+id/rain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/pioggia"
                app:layout_constraintStart_toStartOf="@+id/Indiceuv"
                app:layout_constraintTop_toBottomOf="@id/separator3" />

            <TextView
                android:id="@+id/rainpercent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/pioggia_cm"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/Indiceuv"
                app:layout_constraintTop_toBottomOf="@id/rain"
                tools:text="@string/rainCM" />

            <TextView
                android:id="@+id/coperturapercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copertura_percentuale"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/copertura"
                tools:text="@string/coperturaPercent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <View
        android:id="@+id/separator4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_tiny"
        android:layout_marginHorizontal="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_bigger_2"
        android:background="@color/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview" />

</androidx.constraintlayout.widget.ConstraintLayout>