<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_medium"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tomorrowPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/place_region"
        android:textColor="#230EA5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tomorrowtest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/tomorrowtxt"
        android:textColor="#230EA5"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tomorrowPlace"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tomorrowinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/tomorrowinfos"
        android:textColor="#230EA5"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tomorrowtest"
        tools:layout_editor_absoluteX="16dp" />

<!--    <TextView-->
<!--        android:id="@+id/condition"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/margin_medium"-->
<!--        android:fontFamily="@font/inter"-->
<!--        android:text="@string/weather"-->
<!--        android:textColor="#230EA5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tomorrowinfo" />-->
</androidx.constraintlayout.widget.ConstraintLayout>