<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@color/color_background">

    <TextView
        android:id="@+id/luogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:fontFamily="@font/inter"
        android:text="@string/today_title_location"
        android:textColor="@color/todaytext1"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="40dp"
        />

    <TextView
        android:id="@+id/oggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/today_title_oggi"
        android:textColor="@color/todaytext1"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/luogo"
        app:layout_constraintTop_toBottomOf="@id/luogo"
        android:paddingStart="40dp"
        />

    <TextView
        android:id="@+id/tvTodayDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="Domenica 10 settembre"
        android:textColor="@color/todaytext1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/oggi"
        app:layout_constraintTop_toBottomOf="@+id/oggi"
        android:paddingStart="40dp"
        />

    <TextView
        android:id="@+id/clima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/today_title_clima"
        android:textColor="@color/todaytext1"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTodayDate"
        android:paddingStart="40dp"
        android:paddingTop="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>